<resources>
    <string name="app_name">JusTap</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scanner_info_title">How to scan?</string>
    <string name="scanner_info_content">Give camera access to JusTap by allowing the permission and then hold the phone facing the QR.\nDon\'t worry about the orientation of QR Code.\nNote:\n1. Stay online if the other person has turned on Offline Mode\n2. Stay online to access the result links\n3.The scanned result will be saved in History which you can check out anytime.</string>
    <string name="Scanner">Scanner</string>
    <string name="OfflineMode">Offline Mode</string>
    <string name="OfflineModeInfo">Turn on the switch if you\'re not connected to Internet and still want to share contacts using JusTap.This is totally up to you and optional, this does not affects you data or QR Code.</string>
    <string name="MyQRCode">My QR Code</string>
    <string name="LogoutTitle">Logout</string>
    <string name="LogoutDescription">Are you sure you want to logout?</string>
    <string name="LogoutCancel">Cancel logout</string>
    <string name="Settings">Settings</string>
    <string name="mailTo">mailto:binayshaw7777@gmail.com?Subject=JusTap%20Android%20application%20feedback%20main&amp;Body=Your%20feedback%20is%20important%20to%20us%21</string>
    <string name="Home">Home</string>
    <string name="ClearHistory">Clear History</string>
    <string name="ClearHistoryDescription">Are you sure you want to clear history?</string>
    <string name="DontClearHistory">Don\'t clear</string>
    <string name="History">History</string>
    <string name="Profile">Profile</string>
    <string name="DiscardChanged">Discard Changes</string>
    <string name="Discard">Discard</string>
    <string name="DiscardChangedDescription">Are you sure you discard changes?</string>
    <string name="ContinueEditing">Continue editing</string>
    <string name="ConfirmChanges">Confirm change</string>
    <string name="ConfirmDelete">Confirm Delete</string>
    <string name="AddNewAccount">Add new account?</string>
    <string name="AddNewSocial">Add new Social?</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="yes_save">Yes Save</string>
    <string name="DontSave">Don\'t save</string>
    <string name="ConfirmChangesDescription">Are you sure you want to make changes?</string>
    <string name="ConfirmAddDescription">Are you sure to add new Social?</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="AboutUs">About us</string>
    <string name="LogIn">Log In</string>
    <string name="sendResetLink">Send reset link</string>
    <string name="HowToUse">How to use?</string>
    <string name="HowToUseDescription">Once you add the accounts from the floating button at the bottom right corner, you can see all your accounts in the list as shown.\n\nThe list displays:\n1.Name\n2.Logo\n3.Your account data\n4.Switch\n\nTurning on/off the switch will allow/restrict the account to show in the result when your QR is scanned.\nIn other words, turning off the switch will not show it in the scanner\'s result screen, and turning it on will show and will be clickable as well.</string>
    <string name="EnterURLorUsername">What to add here?</string>
    <string name="AddEditFragmentBottomModalDescription">This input field accepts a range of inputs, including social media handles and URLs for various platforms.\n\nIn some cases, such as with WhatsApp, the input field also accepts contact numbers. Please make sure to enter a valid handle, URL, or contact number as applicable.\n\n\nExamples of valid inputs include "@username" for Twitter or Instagram, "https://www.example.com" for a website, or a phone number formatted with the country code for WhatsApp.</string>
    <string name="AreYouSureToUpdateThisSocial">Are you sure to update this Social?</string>
    <string name="Update">Update</string>
    <string name="YesUpdate">Yes Update</string>
    <string name="DontUpdate">Don\'t update</string>
    <string name="AreYouSureYouWantToDeleteThisAccount">Are you sure you want to delete this account type?</string>
    <string name="AreYouSureToDeleteThisSocial">Are you sure to delete this Social?</string>
    <string name="Delete">Delete</string>
    <string name="YesDelete">Yes Delete</string>
    <string name="DontDelete">Don\'t delete</string>
    <string name="AddAccount">Add account</string>
    <string name="EditAccount">Edit account</string>
    <string name="UpdateChanges">Update changes</string>
    <string name="ScanCompleted">Scan completed</string>
    <string name="PreparingResult">Preparing Result</string>
    <string name="BinayShaw">Binay Shaw</string>
    <string name="AboutMeDescription">Android Intern @HumaraNagar | Ex. @Edvora</string>
    <string name="createAccount">Create Account</string>
    <string name="createANewAccount">Create a new account</string>
    <string name="customizeQR">Customize QR</string>
    <string name="customizeQRDescription">You can customize your QR Code\nMake sure to use proper colors</string>
    <string name="chooseColorForForeground">Choose color for foreground</string>
    <string name="chooseColorForBackground">Choose color for background</string>
    <string name="cancel">Cancel</string>
    <string name="changesSaved">Changes Saved</string>
    <string name="changesSavedDescription">Your new QR preferences was saved successfully</string>
    <string name="badContrast">Contrast is bad, choose different color</string>
    <string name="badContrastDescription">Please choose a different color</string>
    <string name="anErrorOccurred">An error occurred</string>
    <string name="choose_secondary_color">Secondary</string>
    <string name="choose_primary_color">Primary</string>
    <string name="successfullyScanned">Successfully Scanned!</string>
    <string name="reset_colors">Reset Colors</string>
    <string name="noInternet">No Internet available</string>
    <string name="noInternetDescription">Please make sure you\'re connected to the Internet</string>
    <string name="clearHistory">History cleared</string>
    <string name="clearHistoryDescription">Successfully cleared history</string>
    <string name="scan_justap_qrs">Scan JusTap QRs</string>
    <string name="download_resume">Download Resume</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search_by_name_binay">Search by name</string>
    <string name="enter_email">Enter your email</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="enter_password">Password is empty</string>
    <string name="small_size_password">Password length less than 8 letters</string>
    <string name="invalid_password">Password must contains uppercase, lowercase, digit and symbol</string>
    <string name="successfullLoggedIn">Successfully Logged In</string>
    <string name="signin">Sign In</string>
    <string name="login" translatable="false">Log In</string>
    <string name="enter_name">Enter your name</string>
    <string name="press_once_again_to_exit">Press once again to exit!</string>
    <string name="no_data_to_clear">No data to clear</string>
    <string name="username123">\@username123</string>
    <string name="select">Select</string>
    <string name="account_url_username">Account URL/username</string>
    <string name="add_account">Add account</string>
    <string name="youve_used_all_accounts">You\'ve used all accounts</string>
    <string name="data_added_successfully">Data updated successfully</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="how_history_saving_works">How History saving works?</string>
    <string name="welcome_to_justap">Welcome to JusTap</string>
    <string name="needHelpSettingsDescription">JusTap makes exchanging contact information and social links a breeze!\n\nAdd your social accounts, scan their or share yours QR codes to connect with them, edit your profile, customize your QR code, and turn off the visibility of a specific social account or contact.\nYou can also delete locally saved scanned history anytime.\n\nClick on the top left icon to mail us directly.\nHappy networking!</string>
    <string name="historyScreenHelpDescription">JusTap automatically saves a history of all the QR codes you\'ve scanned. You can see a list of all your past scans.\n\nKeep track of the QR codes you\'ve scanned, and access the relevant information quickly.\nDelete an individual item or clear the entire history in a single tap.\n\nSo next time you scan a QR code, remember that it\'s automatically saved in your scan history.</string>
    <string name="enter_your_bio">Enter your bio</string>
    <string name="bio">Bio</string>
    <string name="current_name_of_user">Current name of user</string>
    <string name="name">Name</string>
    <string name="impressions">Impressions</string>
    <string name="you_scanned">You scanned</string>
    <string name="empty_value">-</string>
    <string name="profile_updated_description">You can check the changes as well :D</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="data_updated_successfully">Data updated successfully</string>
    <string name="data_saved_successfully">Data saved successfully</string>
    <string name="data_deleted_successfully">Data deleted successfully</string>
    <string name="dummy_phone_number">+91-XXX-XXX-XXXX</string>
    <string name="dummy_email">xyz1234@gmail.com</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="create">Create</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_sent">Email Sent</string>
    <string name="channel_id">NotificationChannelId</string>
    <string name="channel_name">Notification Channel Name</string>
    <string name="result_notification_channel_id">Result Notification Id</string>
    <string name="result_notification_channel_name">Result Notification</string>
    <string name="made_with_version">Made with ♥ v1.3</string>
    <string name="view_full_profile">View full profile</string>
    <string name="enter">Enter\ </string>
    <string name="number">\ Number</string>
    <string name="url_username">" URL/Username"</string>
    <string name="tapped">Tapped</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="your_qr_code_is_saved_in_gallery">Your QR Code is successfully saved in gallery</string>
    <string name="deleted">Deleted</string>
    <string name="show_profile_image">Show profile image</string>
    <string name="choose_colors">Choose Colors</string>
    <string name="wohoo_update_available">Wohoo, Update Available!</string>
    <string name="new_update_description">Would you like to update it now?</string>
    <string name="update">Update</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="fill_all_the_inputs">Fill all input fields</string>
    <string name="switch_qr_shape">Change QR Design</string>
    <string name="no_history_to_show">No History To Show\nWe will update this once\nyou scan a JusTap QR</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="change_language">Change Language</string>
    <string name="please_select_any_one_from_the_options">Please select any one from the options</string>
    <string name="modal_handle">Modal Handle</string>
</resources>