<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/options_modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    android:background="@drawable/modal_drawable">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qrCodePreview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/qrCodePreview"
        app:layout_constraintStart_toStartOf="@+id/qrCodePreview"
        app:layout_constraintTop_toBottomOf="@+id/qrCodePreview">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/show_profile_image_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/show_profile_image"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/show_profile_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/choose_colors"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resetColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_colors"
            android:textColor="@color/medium_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/pickColorFor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/normal_button"
        android:text="@string/choose_primary_color"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/linearLayout9"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

    <Button
        android:id="@+id/pickColorFor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/normal_button"
        android:text="@string/choose_secondary_color"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@color/et_box_color"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/linearLayout9"
        app:layout_constraintTop_toBottomOf="@+id/pickColorFor2" />

    <TextView
        android:id="@+id/positiveOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="Positive option" />

    <TextView
        android:id="@+id/negativeOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/negative_red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/positiveOption"
        app:layout_constraintStart_toStartOf="@+id/positiveOption"
        app:layout_constraintTop_toBottomOf="@+id/positiveOption"
        tools:text="Negative option" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="3dp"
        android:layout_height="3dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>